Closed
Bug 338541
Opened 20 years ago
Closed 20 years ago
All prefwindows are blank/broken and feeds are empty.
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: hsumen, Assigned: WeirdAl)
References
()
Details
(Keywords: regression, testcase)
Attachments
(2 files, 1 obsolete file)
|
898 bytes,
application/xml
|
Details | |
|
912 bytes,
patch
|
bryner
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060519 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060519 Minefield/3.0a1
Between the May 18th and May 19th builds, Add-ons is broken. The manager's main content is blank when you open it, and clicking the Themes icon has no effect.
Reproducible: Always
Steps to Reproduce:
1.Tools> Add-ons
2.Ta da!
3.
Actual Results:
Nothing
Expected Results:
Something
Js Console error...
Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIObserverService.removeObserver]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://mozapps/content/extensions/extensions.js :: Shutdown :: line 487" data: no]
http://forums.mozillazine.org/viewtopic.php?p=2271877#2271877
Comment 1•20 years ago
|
||
Confirmed on Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060519 Minefield/3.0a1 ID:2006051905 [cairo]
-> severity : major
Summary: The Add-ons window is blank/broken. → All prefwindows are blank/broken.
Comment 2•20 years ago
|
||
This happened between 1.9a1_2006051901 and 1.9a1_2006051903.
Component: Preferences → Extension/Theme Manager
Comment 3•20 years ago
|
||
Oh well, I really did not change the component :(
Component: Preferences → Extension/Theme Manager
Updated•20 years ago
|
Component: Extension/Theme Manager → Preferences
(In reply to comment #3)
> Oh well, I really did not change the component :(
>
I did, it seems this is affecting all prefwindows.
Comment 5•20 years ago
|
||
QA Contact: extension.manager → preferences
Comment 6•20 years ago
|
||
And most of my feeds are empty.
Not sure to what component this all belongs.
Comment 7•20 years ago
|
||
Does this work now that some of those checkins have been backed out?
Updated•20 years ago
|
Severity: major → critical
Flags: blocking1.9a1?
Summary: All prefwindows are blank/broken. → All prefwindows are blank/broken and feeds are empty.
Version: unspecified → Trunk
Comment 8•20 years ago
|
||
(In reply to comment #7)
> Does this work now that some of those checkins have been backed out?
>
Yeah, same result with the backouts included
Comment 9•20 years ago
|
||
the bug that caused
https://bugzilla.mozilla.org/show_bug.cgi?id=338541 is in
radio.xml in _getRadioChildren methode , its look like that the createTreeWalker is broken there. if i changed
- var iterator = this.ownerDocument.createTreeWalker(this, NodeFilter.SHOW_ELEMENT, this._filterRadioGroup, true);
- while (iterator.nextNode())
- radioChildren.push(iterator.currentNode);
+ var XULNS = "http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul";
+ var _radioChildren = this.getElementsByTagNameNS(XULNS, "radio");
+ for (var i; i< _radioChildren.length; i++)
+ radioChildren.push(_radioChildren[i]);
then all work well, but i don't know if this patch is valid because the remark in getRadioChildren
Comment 10•20 years ago
|
||
bug 337543 Gavin ?
works in firefox-3.0a1.en-US.win32_20060519_0149pst_cairo.zip
fails in firefox-3.0a1.en-US.win32_20060519_0402pst_cairo.zip
Comment 11•20 years ago
|
||
(In reply to comment #10)
> bug 337543 Gavin ?
Yes, that seems likely.
Comment 12•20 years ago
|
||
Weird in that case that a build with the ID 1.9a1_2006051903 contains patches checked in on 2006-05-19 03:01.
| Reporter | ||
Comment 13•20 years ago
|
||
The UI for file download options is affected by this as well...
http://forums.mozillazine.org/viewtopic.php?p=2272092#2272092
Comment 14•20 years ago
|
||
can someone create a testcase for this bug please ?
Comment 15•20 years ago
|
||
Firefox is one big testcase at the moment :) :)
Thought that Onemen had a patch, no?
Comment 16•20 years ago
|
||
Open Options
Error: children[i] has no properties
Source file: chrome://global/content/bindings/radio.xml
Line: 113
Error: children[i] has no properties
Source file: chrome://global/content/bindings/radio.xml
Line: 45
Error: children[i] has no properties
Source file: chrome://global/content/bindings/radio.xml
Line: 148
Open Add-ons manager
Error: children[i] has no properties
Source file: chrome://global/content/bindings/radio.xml
Line: 113
Close add-ons manager
Error: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIObserverService.removeObserver]
Source file: chrome://mozapps/content/extensions/extensions.js
Line: 487
| Assignee | ||
Comment 17•20 years ago
|
||
| Assignee | ||
Comment 18•20 years ago
|
||
The testcase I just attached shows the treewalker's setting of currentNode is broken completely. It works in Firefox 1.5.0.3.
| Assignee | ||
Comment 19•20 years ago
|
||
Whoops. Syntax error.
Attachment #222651 -
Attachment is obsolete: true
Comment 20•20 years ago
|
||
What I also see is that the contents of the JSConsole disappear when I hover over the icons and move my mouse outside the window. When I restart Firefox it stays away for some time and then it begins again.
| Assignee | ||
Updated•20 years ago
|
Component: Preferences → DOM: Traversal-Range
Product: Firefox → Core
Target Milestone: --- → mozilla1.9alpha
| Assignee | ||
Updated•20 years ago
|
Assignee: nobody → traversal-range
QA Contact: preferences → ian
Comment 21•20 years ago
|
||
Also: when the Console is full of errors and I close it and reopen it after a while, it is suddenly empty or most of them are gone.
| Assignee | ||
Comment 22•20 years ago
|
||
So, GetCurrentNode says CallQueryInterface(mCurrentNode, aCurrentNode), but doesn't return right away. The next thing that happens is aCurrentNode is set to null. Whoops.
Patch coming up, as soon as I verify that this indeed is the cause of the bustage.
Assignee: traversal-range → ajvincent
| Assignee | ||
Comment 23•20 years ago
|
||
Attachment #222657 -
Flags: superreview?
Attachment #222657 -
Flags: review?
| Assignee | ||
Updated•20 years ago
|
Attachment #222657 -
Flags: superreview?(bugmail)
Attachment #222657 -
Flags: superreview?
Attachment #222657 -
Flags: review?(bugmail)
Attachment #222657 -
Flags: review?
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Updated•20 years ago
|
Attachment #222657 -
Flags: superreview?(bugmail) → superreview+
Updated•20 years ago
|
Attachment #222657 -
Flags: review?(bugmail) → review+
Comment 24•20 years ago
|
||
Checking in content/base/src/nsTreeWalker.cpp;
/cvsroot/mozilla/content/base/src/nsTreeWalker.cpp,v <-- nsTreeWalker.cpp
new revision: 1.18; previous revision: 1.17
done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 25•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060519 Minefield/3.0a1 ID:2006051913
Verified
jsconsole remains empty (no errors/warnings)
Options window OK
Add-ons manager OK
Live Bookmarks OK
Thanks for the fix Alex!
Updated•20 years ago
|
Flags: blocking1.9a1?
Verified FIXED using build 2006-05-20-04 of SeaMonkey trunk under Windows XP.
Status: RESOLVED → VERIFIED
Comment 28•20 years ago
|
||
*** Bug 339401 has been marked as a duplicate of this bug. ***
Comment 29•19 years ago
|
||
added to mochitest
RCS file: /cvsroot/mozilla/testing/mochitest/tests/test_bug338541.xhtml,v
done
Checking in tests/test_bug338541.xhtml;
/cvsroot/mozilla/testing/mochitest/tests/test_bug338541.xhtml,v <-- test_bug338541.xhtml
initial revision: 1.1
done
Flags: in-testsuite+
Updated•13 years ago
|
Component: DOM: Traversal-Range → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•