bug 338541 don't always return null from GetCurrentNode (plus, don't leak the current node) patch by Alex Vincent <ajvincent@gmail.com> r=bryner sr=neil a=darin